@@ -1,2 +1,11 @@
 #!/bin/sh
-/sbin/initqueue --settled --onetime --unique /sbin/fll-udev
+
+PATH=/usr/sbin:/usr/bin:/sbin:/bin
+
+if fll_blockdev_detect --monitor --execp=/sbin/fll; then
+    ln -s null /dev/root
+    : > /run/initramfs/.need_shutdown
+    exit 0
+fi
+
+exit 1
