@@ -8,6 +8,8 @@ fll-live-initramfs (20251214.2) UNRELEASED; urgency=medium
     - declaring root was found
     - declaring systemd shutdown (exitrd) should be setup
   * Execute fll scripts during mount phase of dracut init.
+  * Simplify execution of fll hook - do it directly instead of via
+    initqueue.
 
  -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 14 Dec 2025 20:39:45 +0100
 
